# gravity_simulation

./: CMakeLists.txt  run.sh
inc/: Camera.h  IndexBuffer.h  MyWindow.h  Renderer.h  Shaders.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
res/shaders/: default.glsl  rgb.glsl  texture.glsl
src/: IndexBuffer.cpp  MyWindow.cpp  Renderer.cpp  Shaders.cpp  Texture.cpp  VertexArray.cpp  main.cpp
